--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   },
   "scripts": {
     "build": "webpack --mode production",
-    "start": "npm start ./my-app && node ./src/backend/server",
+    "start": "npm run build && node ./src/backend/server",
     "client": "webpack-dev-server --mode development --devtool inline-source-map --hot",
     "server": "nodemon ./src/backend/server",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "client:dev": "react-scripts start",
+    "dev": "concurrently \"npm run server\" \"npm run client:dev\""
   },
   "author": "Benjamin Hughes",
   "license": "MIT",
@@ -40,9 +41,14 @@
     "multer": "^1.3.0",
     "mysql2": "^2.1.0",
     "path": "^0.12.7",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2",
-    "react-router-dom": "^5.0.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4",
     "sass": "^1.27.1",
     "sass-loader": "^10.0.4",
     "serve-favicon": "2.4.5",
@@ -57,5 +63,17 @@
     "webpack-dev-server": "^3.11.0",
     "concurrently": "^5.3.0",
     "case-sensitive-paths-webpack-plugin": "^2.3.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
